@@ -1,3 +1,13 @@
+2007-10-24  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* Gui/CSharpTextEditorExtension.cs: Refactored the keypress code to separate
+	  out the indent engine and doc comments, also splitting up the indent
+	  handling code into three phases. Renamed "engine" to "indentEngine".
+	  Improved handling of auto-commenting on newlines. Fixed "Bug 335824 -
+	  Better handling of the 'tab' key". Fixed "Bug 326289 - MD texteditor is
+	  painfully slow" by caching old indent stacks and bulk-copying characters
+	  during large updates.
+
 2007-10-23  Mike Krüger <mkrueger@novell.com> 
 
 	* Gui/CSharpTextEditorExtension.cs: Fixed "Bug 335145 - Intellisense
